pageStyle/index.css
.page {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 18px;

    & > .logo {
        display: flex;
        flex-direction: row;
        gap: 6px;
        align-items: center;

        & > svg {
            width: 38px;
            height: 38px;
        }

        & > span {
            font-weight: var(--font-black);
            font-size: 32px;

            background: var(--light-text-gradient);
            background-clip: text;
            -webkit-background-clip: text;
            -webkit-text-fill-color: transparent;
        }
    }

    & > h1.header {
        font-weight: var(--font-bold);
        font-size: 32px;
    }

    & > a.start {
        width: 60%;
        font-size: 16px;
        font-weight: var(--font-bold);
        padding: 8px 16px;
    }

    .description {
        a {
            color: var(--light-primary);
            text-decoration: underline;
        }

        font-size: 16px;
        font-weight: var(--font-light);
    }

    hr {
        width: 60%;
        border: none;
        border-top: 1px solid var(--light-border);
        margin: 16px 0;
    }

    .ext-links {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        align-items: center;
        padding: 16px 0;
        gap: 16px;
        width: 60%;

        & > * {
            width: 100%;
        }

        a.button {
            font-size: 16px;
            font-weight: var(--font-bold);
            padding: 8px 16px;
            text-decoration: none;
            background-color: var(--light-secondary);
            color: var(--light-secondary-foreground);
            border-radius: 8px;
        }

        :first-child {
            text-align: left;
        }
        :last-child {
            text-align: right;
        }
    }
}

